@@ -1,5 +1,8 @@
 Select box manipulation ChangeLog
 
+17 June 2008
+  available under a MIT/GPL dual license. Callback function for containsOption is passed on the index of the found option
+
 14 December 2007
   removing options by index now works again
 
